--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-easy-swipe": "^0.0.23",
+    "react-modal-image": "^2.6.0",
     "react-responsive-carousel": "^3.2.23",
     "react-transition-group": "^4.4.5",
     "tailwindcss": "^3.3.2"
